last version in office:feat(doc): swagger config compelete
