# swagger/swagger.json
@@ -1,157 +1,297 @@
 {
-    "openapi": "3.0.0",
-    "info": {
-      "title": "library API Task Manager",
-      "description": "API library for todo-app ",
-      "version": ".6.1"
+  "openapi": "3.0.0",
+  "info": {
+    "title": "Todo API",
+    "description": "API library for Todo App",
+    "version": "1.0.0"
+  },
+  "servers": [
+    {
+      "url": "http://localhost:5000"
+    }
+  ],
+  "tags": [
+    {
+      "name": "Authentication",
+      "description": "APIs for user authentication"
     },
-    "component": {
-      "schema": {
-        "User":{
-          "type": "object",
-          "properties": {
-            "id":{
-              "type": "integer",
-              "example": 4
-            },
-            "name":{
-              "type": "string",
-              "example": "amir.torkashvand"
-            },
-            "password":{
-              "type": "string",
-              "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ"
-            },
-            "email": {
-              "type": "string",
-              "example": "amir@gamil.com"
-            }
-
-          }
-        }
-      }
-    },
-    "servers": [
-      {
-        "url": "http://localhost:3000"
-      }
-    ],
-    "tags": {
+    {
       "name": "User APIs",
-      "description": "all APIs for "
+      "description": "APIs for managing users"
     },
-    "paths": {
-      "/api/user/list": {
-        "get": {
-          "summary": "Get all users",
-          "responses": {
-            "200": {
-              "description": "A list of users",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "type": "array"
+    {
+      "name": "Todo APIs",
+      "description": "APIs for managing todos"
+    }
+  ],
+  "paths": {
+    "/api/user/register": {
+      "post": {
+        "tags": [
+          "Authentication"
+        ],
+        "summary": "Register a new user",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/RegisterRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "User registered"
+          }
+        }
+      }
+    },
+    "/api/user/login": {
+      "post": {
+        "tags": [
+          "Authentication"
+        ],
+        "summary": "User login",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/LoginRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "User logged in"
+          }
+        }
+      }
+    },
+    "/api/users": {
+      "get": {
+        "tags": [
+          "User APIs"
+        ],
+        "summary": "Get all users",
+        "responses": {
+          "200": {
+            "description": "A list of users",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/User"
                   }
                 }
               }
-            },
-            "500": {
-              "description": "server not response",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "type":"array"
-                  }
-                }
-              }
-            },
-            "404": {
-              "description": "users not found",
-              "content": {
-                "application/json": {
-                  "schema":{
-                    "type": "array"
-                  }
-                }
-              }
-            },
-            "400":{
-              "description": "bad Request for User"
-
             }
           }
         }
       }
     },
-    "paths": {
-      "/api/user/signup": {
-        "post": {
-          "summary": "Create a User",
-          "requetBody": true,
-          "content":{
-            "application/json":{
-              "schema":{
-                "type":"object",
-                "properties":{
-                  "username":{
-                    "type": "string"
+    "/api/todos": {
+      "get": {
+        "tags": [
+          "Todo APIs"
+        ],
+        "summary": "Get all todos",
+        "responses": {
+          "200": {
+            "description": "A list of todos",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Todo"
                   }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Todo APIs"
+        ],
+        "summary": "Create a new todo",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Todo"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Todo created"
+          }
+        }
+      }
+    },
+    "/api/todos/{id}": {
+      "get": {
+        "tags": [
+          "Todo APIs"
+        ],
+        "summary": "Get a todo by ID",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            },
+            "description": "ID of the todo"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Todo found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Todo"
                 }
               }
             }
           },
-          "response": {
-            "200":{
-              "description": "user created"
+          "404": {
+            "description": "Todo not found"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Todo APIs"
+        ],
+        "summary": "Update a todo",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            },
+            "description": "ID of the todo"
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Todo"
+              }
             }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Todo updated"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Todo APIs"
+        ],
+        "summary": "Delete a todo",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            },
+            "description": "ID of the todo"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Todo deleted"
+          },
+          "404": {
+            "description": "Todo not found"
           }
         }
       }
-    },
-    "paths":{
-      "/api/user/delete/{id}":{
-        "delete":{
-          "summary": "delete User",
-          "parameters": [
-            {
-              "name": "id",
-              "in": "path",
-              "required": true,
-              "description": "the id of user to delete",
-              "schema":{
-                "type":"integer"
-              }
-            }
-          ],
-          "response":{
-            "200":{
-              "description": "user deleted",
-              "content":{
-                "application/json":{
-                  "schema":{
-                    "type":"object",
-                    "properties":{
-                      "id":{
-                        "type":"integer"
-                      }
-                    }
-                  }
-                }
-
-              }
-            },
-            "400":{
-              "description": "bad Request: the specified User ID is invalid (not a number)"
-            },
-            "404": {
-              "description": "a user with the specified ID was not found"
-            },
-            "default": {
-              "description": "Unexpected error"
-            }
-          }  
+    }
+  },
+  "components": {
+    "schemas": {
+      "RegisterRequest": {
+        "type": "object",
+        "properties": {
+          "username": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "username",
+          "password"
+        ]
+      },
+      "LoginRequest": {
+        "type": "object",
+        "properties": {
+          "username": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "username",
+          "password"
+        ]
+      },
+      "User": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "username": {
+            "type": "string"
+          }
+        }
+      },
+      "Todo": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "title": {
+            "type": "string"
+          },
+          "completed": {
+            "type": "boolean"
+          }
         }
       }
     }
   }
-          
+}
